fixing the responsiveness on mobile pt2...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ nav {
 	padding-top: 1rem;
 	background-color: #dcf2f0;
 	border: 0.2em solid #3399F3;
-	margin: 0.2%;
+	width: 100%;
 }
 
 hr { 
@@ -34,7 +34,7 @@ hr {
 	grid-template-rows: 4rem 4rem;
 	grid-gap: 6%;
 	margin: 1%;
-	padding: 10px;
+	padding: 0.5rem;
 	border: 0.2em solid #3399F3;
 	background-color: #dcf2f0;
 }
@@ -112,7 +112,7 @@ hr {
 	grid-template-rows: auto;
 	grid-gap: 1%;
 	margin: 0.3%;
-	padding: 10px;
+	padding: 0.5rem;
 	border: 0.2em solid #3399F3;
 	background-color: #dcf2f0;
 }
